# sophus-rs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  demo-4061a246d80c2a42.js  demo-45f5546d3e365d65.js  demo-45f5546d3e365d65_bg.wasm  demo-4be09d6a3f5a41aa.js  demo-84346cead5be2fe8.js  demo-c07513874744ace8.js  index.html  justfile  manifest.json  publish_all.sh  pyproject.toml  rust-toolchain  rustfmt.toml  sophus-rs.code-workspace
crates/sophus/: Cargo.toml  index.html
crates/sophus/examples/: camera_sim.rs  mini_optics_sim.rs  offscreen.rs  pose_graph.rs  viewer_ex.rs
crates/sophus/src/: app.rs  examples.rs  lib.rs  main.rs  viewer.rs
crates/sophus/src/examples/: bundle_adjustment.rs  camera_sim.rs  circle_obstacle_demo.rs  corridor_demo.rs  demo_app.rs  inverse_depth.rs  opt_widget.rs  optics_sim.rs  point2d_demo.rs  spline_traj_demo.rs  viewer_example.rs
crates/sophus/src/viewer/: actor.rs  offscreen.rs  pixel_renderer.rs  renderable.rs  scene_renderer.rs
crates/sophus_autodiff/: Cargo.toml  README.md
crates/sophus_autodiff/src/: dual.rs  lib.rs  linalg.rs  manifold.rs  maps.rs  params.rs  points.rs
crates/sophus_autodiff/src/dual/: dual_batch_matrix.rs  dual_batch_scalar.rs  dual_batch_vector.rs  dual_matrix.rs  dual_scalar.rs  dual_vector.rs  matrix.rs  scalar.rs  vector.rs
crates/sophus_autodiff/src/linalg/: batch_mask.rs  batch_matrix.rs  batch_scalar.rs  batch_vector.rs  bool_mask.rs  matrix.rs  scalar.rs  vector.rs
crates/sophus_autodiff/src/maps/: curves.rs  matrix_valued_maps.rs  scalar_valued_maps.rs  vector_valued_maps.rs
crates/sophus_bench/: Cargo.toml  README.md
crates/sophus_bench/src/: lib.rs
crates/sophus_block/: Cargo.toml  README.md  build.rs
crates/sophus_block/src/: asserts.rs  block_jacobian.rs  block_solvers.rs  block_sparse_matrix.rs  block_vector.rs  compressed_block_matrix.rs  lib.rs  scalar_solvers.rs  symmetric_block_sparse_matrix.rs
crates/sophus_block/src/block_solvers/: block_sparse_ldlt.rs  triangular_solve.rs
crates/sophus_block/src/scalar_solvers/: dense_ldlt.rs  dense_lu.rs  sparse_ldlt.rs  sparse_lu.rs  sparse_qr.rs
crates/sophus_calculus/: Cargo.toml
crates/sophus_calculus/src/: dual.rs  lib.rs  points.rs  spline.rs
crates/sophus_calculus/src/dual/: dual_matrix.rs  dual_scalar.rs  dual_vector.rs
crates/sophus_calculus/src/manifold/: traits.rs
crates/sophus_calculus/src/maps/: curves.rs  matrix_valued_maps.rs  scalar_valued_maps.rs  vector_valued_maps.rs
crates/sophus_calculus/src/spline/: spline_segment.rs
crates/sophus_calculus/src/types/: matrix.rs  params.rs  scalar.rs  vector.rs
crates/sophus_core/: Cargo.toml
crates/sophus_core/src/: calculus.rs  floating_point.rs  geometry.rs  lib.rs  linalg.rs  manifold.rs  params.rs  points.rs  tensor.rs  time_series.rs
crates/sophus_core/src/calculus/: dual.rs  maps.rs  region.rs  spline.rs
crates/sophus_core/src/geometry/: hypersphere.rs  ray.rs
crates/sophus_core/src/linalg/: batch_mask.rs  batch_matrix.rs  batch_scalar.rs  batch_vector.rs  bool_mask.rs  matrix.rs  scalar.rs  vector.rs
crates/sophus_core/src/manifold/: traits.rs  unit_vector.rs
crates/sophus_core/src/tensor/: arc_tensor.rs  element.rs  layout.rs  mut_tensor.rs  mut_tensor_view.rs  tensor_view.rs
crates/sophus_geo/: Cargo.toml  README.md
crates/sophus_geo/src/: hyperplane.rs  hypersphere.rs  inverse_depth.rs  lib.rs  manifold.rs  ray.rs  region.rs  unit_vector.rs
crates/sophus_image/: Cargo.toml  README.md
crates/sophus_image/src/: arc_image.rs  color_map.rs  image_view.rs  intensity_image.rs  interpolation.rs  io.rs  lib.rs  mut_image.rs  mut_image_view.rs  png.rs
crates/sophus_lie/: Cargo.toml  README.md
crates/sophus_lie/src/: average.rs  complex.rs  factor_lie_group.rs  groups.rs  isometry2.rs  isometry3.rs  lib.rs  lie_group.rs  lie_group_manifold.rs  quaternion.rs  real_lie_group.rs  rotation2.rs  rotation3.rs  sl2c.rs  traits.rs  translation_product_product.rs
crates/sophus_opt/: Cargo.toml  README.md
crates/sophus_opt/src/: block.rs  cost.rs  cost_args.rs  cost_fn.rs  example_problems.rs  ldlt.rs  lib.rs  nlls.rs  quadratic_cost.rs  robust_kernel.rs  solvers.rs  term.rs  variables.rs
crates/sophus_pyo3/: Cargo.toml
crates/sophus_pyo3/src/: lib.rs  pyo3.rs
crates/sophus_sensor/: Cargo.toml  README.md
crates/sophus_sensor/src/: affine.rs  camera.rs  camera_enum.rs  distortion_table.rs  distortions.rs  dyn_camera.rs  general_camera.rs  generic_camera.rs  kannala_brandt.rs  lib.rs  ortho_camera.rs  perspective_camera.rs  pinhole_1d.rs  projections.rs  traits.rs
crates/sophus_sim/: Cargo.toml  README.md
crates/sophus_sim/src/: camera_simulator.rs  lib.rs
crates/sophus_solver/: Cargo.toml  README.md
crates/sophus_solver/src/: asserts.rs  bench_utils.rs  block_sparse.rs  compressed_matrix.rs  compressible_matrix.rs  covariance.rs  dense.rs  error.rs  indefinite.rs  indefinite_solver.rs  invertible.rs  kernel.rs  ldlt.rs  lib.rs  lu.rs  matrix.rs  positive_semi_definite.rs  positive_semidefinite.rs  positive_semidefinite_solver.rs  psd_solver.rs  qr.rs  sparse.rs  svd.rs  symmetric_matrix.rs  test_examples.rs
crates/sophus_spline/: Cargo.toml  README.md
crates/sophus_spline/src/: lib.rs  lie_group_spline.rs  spline_segment.rs
crates/sophus_tensor/: Cargo.toml  README.md
crates/sophus_tensor/src/: arc_tensor.rs  element.rs  layout.rs  lib.rs  mut_tensor.rs  mut_tensor_view.rs  mut_view.rs  tensor_view.rs  view.rs
crates/sophus_timeseries/: Cargo.toml  README.md
crates/sophus_timeseries/src/: lib.rs
crates/sophus_viewer/: Cargo.toml  README.md
crates/sophus_viewer/src/: actor.rs  camera_simulator.rs  interactions.rs  lib.rs  offscreen.rs  offscreen_renderer.rs  packets.rs  pixel_renderer.rs  render_context.rs  renderable.rs  renderables.rs  renderer.rs  scene_renderer.rs  simple_viewer.rs  viewer.rs  viewer_base.rs  views.rs
crates/sophus_wasm/: Cargo.toml  index.html
crates/sophus_wasm/assets/: sw.js
crates/sophus_wasm/src/: app.rs  examples.rs  lib.rs  main.rs
(+598 files in other folders)
