[workspace]
members = [
  "crates/sophus",
  "crates/sophus_assert",
  "crates/sophus_autodiff",
  "crates/sophus_bench",
  "crates/sophus_tensor",
  "crates/sophus_image",
  "crates/sophus_lie",
  "crates/sophus_geo",
  "crates/sophus_spline",
  "crates/sophus_sensor",
  "crates/sophus_solver",
  "crates/sophus_opt",
  "crates/sophus_timeseries",
  "crates/sophus_renderer",
  "crates/sophus_viewer",
  "crates/sophus_sim",
]
resolver = "3"

[workspace.package]
edition = "2024"
include = ["**/*.rs", "**/*.wgsl", "**/*.md", "**/Cargo.toml", "**/*.png"]
keywords = ["robotics", "optimization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sophus-vision/sophus-rs/"
rust-version = "1.94.0"
version = "0.16.0"

[workspace.dependencies]
sophus = {path = "crates/sophus", version = "0.16.0"}
sophus_assert = {path = "crates/sophus_assert", version = "0.16.0"}
sophus_autodiff = {path = "crates/sophus_autodiff", version = "0.16.0"}
sophus_bench = {path = "crates/sophus_bench", version = "0.16.0"}
sophus_geo = {path = "crates/sophus_geo", version = "0.16.0"}
sophus_image = {path = "crates/sophus_image", version = "0.16.0"}
sophus_lie = {path = "crates/sophus_lie", version = "0.16.0"}
sophus_opt = {path = "crates/sophus_opt", version = "0.16.0"}
sophus_renderer = {path = "crates/sophus_renderer", version = "0.16.0"}
sophus_sensor = {path = "crates/sophus_sensor", version = "0.16.0"}
sophus_sim = {path = "crates/sophus_sim", version = "0.16.0"}
sophus_solver = {path = "crates/sophus_solver", version = "0.16.0"}
sophus_spline = {path = "crates/sophus_spline", version = "0.16.0"}
sophus_tensor = {path = "crates/sophus_tensor", version = "0.16.0"}
sophus_timeseries = {path = "crates/sophus_timeseries", version = "0.16.0"}
sophus_viewer = {path = "crates/sophus_viewer", version = "0.16.0"}

approx = "0.5"
as-any = "0.3"
async-trait = "0.1"
bytemuck = {version = "1.25", features = ["derive"]}
dyn-clone = "1.0"
eframe = {version = "0.33.3", default-features = false, features = [
  "default_fonts",
  "wgpu",
  "persistence",
  "wayland",
  "x11",
]}
egui-wgpu = "0.33.3"
egui_extras = "0.33.3"
egui_plot = "0.34.1"
enum-as-inner = "0.7"
env_logger = "0.11"
faer = {version = "0.22.6", default-features = false, features = ["linalg", "rayon"]}
futures-intrusive = "0.5"
linked-hash-map = "0.5"
log = "0.4"
nalgebra = {version = "0.34", features = ["bytemuck"]}
ndarray = {version = "0.17", features = ["approx"]}
nonmax = "0.5.5"
num-traits = "0.2"
poll-promise = {version = "0.3.0", features = ["web"]}
pollster = {version = "0.4"}
rand = {version = "0.10", default-features = false, features = [
  "alloc",
]}
rand_chacha = "0.10"
rayon = "1.11"
rustc_version = "0.4"
serde = {version = "1.0.228", features = ["derive"]}
snafu = "0.9"
crossbeam-channel = "0.5"
puffin = "0.20"
web-time = "1.1"
typenum = {version = "1.19", features = ["const-generics"]}
wasm-bindgen-futures = "0.4.64"
web-sys = "0.3.91"
winit = {version = "0.30.11", features = ["android-native-activity"]}

[profile.release]
debug = 1
