[package]
description = "sophus - geometry for robotics and computer vision"
name = "sophus"
readme = "../../README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_core.workspace = true
sophus_image.workspace = true
sophus_lie.workspace = true
sophus_opt.workspace = true
sophus_pyo3.workspace = true
sophus_sensor.workspace = true

nalgebra.workspace = true
ndarray.workspace = true

[features]
pyo3 = [
  "sophus_pyo3/pyo3",
]
simd = [
  "sophus_core/simd",
  "sophus_image/simd",
  "sophus_lie/simd",
  "sophus_opt/simd",
  "sophus_sensor/simd",
]
