[package]
description = "sophus - geometry for robotics and computer vision"
name = "sophus"
readme = "../../README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_autodiff.workspace = true
sophus_geo.workspace = true
sophus_image.workspace = true
sophus_lie.workspace = true
sophus_opt.workspace = true
sophus_renderer.workspace = true
sophus_sensor.workspace = true
sophus_sim.workspace = true
sophus_spline.workspace = true
sophus_tensor.workspace = true
sophus_timeseries.workspace = true
sophus_viewer.workspace = true

nalgebra.workspace = true
ndarray.workspace = true

approx.workspace = true
bytemuck.workspace = true
eframe.workspace = true
egui-wgpu.workspace = true
egui_extras.workspace = true
log.workspace = true
pollster.workspace = true
rand.workspace = true
serde.workspace = true
thingbuf.workspace = true

[build-dependencies]
rustc_version.workspace = true

[features]
default = ["std"]
simd = [
  "sophus_autodiff/simd",
  "sophus_image/simd",
  "sophus_lie/simd",
  "sophus_opt/simd",
  "sophus_sensor/simd",
]
std = [
  "sophus_autodiff/std",
  "sophus_image/std",
  "sophus_lie/std",
  "sophus_opt/std",
  "sophus_sensor/std",
]

[[bin]]
name = "camera_sim"
required-features = ["std"]

[[bin]]
name = "demo"
required-features = ["std"]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70" # to access the DOM (to hide the loading text)

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
