[package]
description = "sophus - geometry for robotics and computer vision"
name = "sophus_autodiff"
readme = "../../README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
approx.workspace = true
log.workspace = true
nalgebra.workspace = true
ndarray.workspace = true
num-traits.workspace = true
snafu.workspace = true
typenum.workspace = true

sleef = {version = "0.3", optional = true}

[features]
simd = ["sleef"]
std = []
default = ["std"]
