[package]
description = "automatic differentiation with optional SIMD acceleration"
name = "sophus_autodiff"
readme = "README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
approx.workspace = true
log.workspace = true
nalgebra.workspace = true
num-traits.workspace = true
snafu.workspace = true
typenum.workspace = true

sleef = {version = "0.3", optional = true}

[build-dependencies]
rustc_version.workspace = true

[features]
default = ["std"]
simd = ["sleef"]
std = []
