[package]
description = "Block-sparse structures and algorithms"
name = "sophus_block"
readme = "README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_autodiff.workspace = true

approx.workspace = true
faer.workspace = true
hashbrown.workspace = true
log.workspace = true
nalgebra.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
snafu.workspace = true

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon.workspace = true

[build-dependencies]
rustc_version.workspace = true

[features]
default = ["std"]
simd = [
  "sophus_autodiff/simd",
]
std = [
  "sophus_autodiff/std",
]
