[package]
description = "sophus - geometry for robotics and computer vision"
name = "sophus_calculus"
readme = "../../README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_tensor.workspace = true

approx.workspace = true
assertables.workspace = true
nalgebra.workspace = true
num-traits.workspace = true
simba.workspace = true
