[package]
description = "sophus - geometry for robotics and computer vision"
name = "sophus_geo"
readme = "../../README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
approx.workspace = true
sophus_core.workspace = true
sophus_lie.workspace = true

[features]
simd = ["sophus_core/simd"]
