[package]
description = "sophus - geometry for robotics and computer vision"
name = "sophus_image"
readme = "../../README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_core.workspace = true

approx.workspace = true
bytemuck.workspace = true
nalgebra.workspace = true
ndarray.workspace = true
num-traits.workspace = true

tiff = {version = "0.9.0", optional = true}
png = {version ="0.17", optional = true}

[features]
simd = ["sophus_core/simd"]
std = ["png", "tiff"]
