[package]
description = "sophus - geometry for robotics and computer vision"
name = "sophus_lie"
readme = "../../README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_autodiff = {workspace = true}

approx.workspace = true
log.workspace = true
nalgebra.workspace = true
num-traits.workspace = true
snafu.workspace = true

[features]
simd = ["sophus_autodiff/simd"]
std = ["sophus_autodiff/std"]
default = ["std"]
