[package]
description = "Sparse non-linear least squares optimization"
name = "sophus_opt"
readme = "README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_autodiff.workspace = true
sophus_image.workspace = true
sophus_lie.workspace = true
sophus_sensor.workspace = true

approx.workspace = true
as-any.workspace = true
dyn-clone.workspace = true
faer.workspace = true
log.workspace = true
nalgebra.workspace = true
ndarray.workspace = true
rand.workspace = true
rand_chacha.workspace = true
snafu.workspace = true

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"

[build-dependencies]
rustc_version.workspace = true

[features]
default = ["std"]
simd = [
  "sophus_autodiff/simd",
  "sophus_image/simd",
  "sophus_lie/simd",
  "sophus_sensor/simd",
]
std = [
  "sophus_autodiff/std",
  "sophus_image/std",
  "sophus_lie/std",
  "sophus_sensor/std",
]

[package.metadata.docs.rs]
all-features = true
