[package]
description = "sophus - geometry for robotics and computer vision"
name = "sophus_pyo3"
readme = "../../README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_core.workspace = true
sophus_lie.workspace = true

nalgebra.workspace = true
numpy.workspace = true

[dependencies.pyo3]
version = "0.21.2"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
