[package]
description = "sophus - geometry for robotics and computer vision"
name = "sophus_sensor"
readme = "../../README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_core.workspace = true
sophus_image.workspace = true

approx.workspace = true
assertables.workspace = true
nalgebra.workspace = true
ndarray.workspace = true
num-traits.workspace = true

[features]
simd = ["sophus_core/simd", "sophus_image/simd"]
