[package]
description = "Camera models for computer vision"
name = "sophus_sensor"
readme = "README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_autodiff.workspace = true
sophus_geo.workspace = true
sophus_image.workspace = true

approx.workspace = true
log.workspace = true
nalgebra.workspace = true
ndarray.workspace = true
num-traits.workspace = true

[build-dependencies]
rustc_version.workspace = true

[features]
simd = ["sophus_autodiff/simd", "sophus_image/simd"]
std = [
  "sophus_autodiff/std",
  "sophus_geo/std",
  "sophus_image/std",
]
default = ["std"]
