[package]
description = "sophus sim"
name = "sophus_sim"
readme = "../../README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_autodiff.workspace = true
sophus_image.workspace = true
sophus_lie.workspace = true
sophus_opt.workspace = true
sophus_renderer.workspace = true
sophus_sensor.workspace = true

approx.workspace = true
bytemuck.workspace = true
eframe.workspace = true
egui_extras.workspace = true
env_logger.workspace = true
linked-hash-map.workspace = true
num-traits.workspace = true
wgpu.workspace = true

[features]
std = [
  "sophus_autodiff/std",
  "sophus_image/std",
  "sophus_lie/std",
  "sophus_opt/std",
  "sophus_renderer/std",
  "sophus_sensor/std",
]
default = ["std"]
