[package]
description = "sophus - geometry for robotics and computer vision"
name = "sophus_spline"
readme = "../../README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
approx.workspace = true
log.workspace = true
num-traits.workspace = true
sophus_autodiff.workspace = true

[features]
simd = ["sophus_autodiff/simd"]
