[package]
description = "Spline interpolation"
name = "sophus_spline"
readme = "README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_autodiff.workspace = true
sophus_lie.workspace = true

approx.workspace = true
log.workspace = true
num-traits.workspace = true

[build-dependencies]
rustc_version.workspace = true

[features]
simd = ["sophus_autodiff/simd", "sophus_lie/simd"]
std = [
  "sophus_autodiff/std",
  "sophus_lie/std",
]
default = ["std"]
