[package]
description = "sophus - geometry for robotics and computer vision"
name = "sophus_tensor"
readme = "../../README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_autodiff.workspace = true

approx.workspace = true
bytemuck.workspace = true
nalgebra.workspace = true
log.workspace = true
ndarray.workspace = true
num-traits.workspace = true
concat-arrays.workspace = true


[features]
simd = ["sophus_autodiff/simd"]
std = ["sophus_autodiff/std"]
