[package]
description = "Dynamic-size tensors of static-size tensors"
name = "sophus_tensor"
readme = "README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_autodiff.workspace = true

approx.workspace = true
bytemuck.workspace = true
nalgebra.workspace = true
log.workspace = true
ndarray.workspace = true
num-traits.workspace = true
concat-arrays.workspace = true

[build-dependencies]
rustc_version.workspace = true

[features]
simd = ["sophus_autodiff/simd"]
std = ["sophus_autodiff/std"]
default = ["std"]

[package.metadata.docs.rs]
all-features = true
