[package]
description = "sophus - geometry for robotics and computer vision"
name = "sophus_timeseries"
readme = "../../README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_geo.workspace = true

approx.workspace = true
log.workspace = true
num-traits.workspace = true

[features]
simd = ["sophus_geo/simd"]
std = ["sophus_geo/std"]
default = ["std"]
