[package]
description = "Time series data structure, e.g. for sensor fusion"
name = "sophus_timeseries"
readme = "README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_geo.workspace = true

approx.workspace = true
log.workspace = true
num-traits.workspace = true

[build-dependencies]
rustc_version.workspace = true

[features]
simd = ["sophus_geo/simd"]
std = ["sophus_geo/std"]
default = ["std"]
