[package]
description = "Basic 2D / 3D visualization, e.g. for computer vision applications"
name = "sophus_viewer"
readme = "README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sophus_autodiff.workspace = true
sophus_image.workspace = true
sophus_lie.workspace = true
sophus_opt.workspace = true
sophus_renderer.workspace = true
sophus_sensor.workspace = true

approx.workspace = true
bytemuck.workspace = true
eframe.workspace = true
egui_extras.workspace = true
egui_plot.workspace = true
env_logger.workspace = true
linked-hash-map.workspace = true
log.workspace = true
num-traits.workspace = true
thingbuf.workspace = true

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true
pollster.workspace = true

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise.workspace = true
wasm-bindgen-futures.workspace = true

[build-dependencies]
rustc_version.workspace = true

[features]
default = ["std"]
std = [
  "sophus_autodiff/std",
  "sophus_image/std",
  "sophus_lie/std",
  "sophus_opt/std",
  "sophus_renderer/std",
  "sophus_sensor/std",
]
